--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".fr.aficiones.SobreMi"
+            android:label=""
             android:exported="false" />
         <activity
             android:name=".DetalleFragmentActivity"
@@ -21,7 +22,7 @@
         <activity
             android:name=".Aficiones"
             android:exported="true"
-            android:label="@string/title_activity_aficiones"
+            android:label="Aficiones"
             android:theme="@style/Theme.Meh">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
